--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -1,13 +1,34 @@
-#summary One-sentence summary of this page.
+#Featuresliste IntraSell 3
 
 = Introduction =
 
-Add your content here.
+Die folgende Auflistung liefert eine Darstellung der Basisaufgaben die mit IntraSell abgedeckt sind. 
 
 
-= Details =
+== IntraSell 3 Featuresliste ==
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+* Lieferscheine, Aufträge, Rechnungen und Gutschriften  JA  JA 
+* Lagerhaltung mit Erfassung von Bestands-, Mindest- und Bestellmengen JA JA 
+* Flexible Artikel- und Warengruppenverwaltung JA JA 
+* Set Artikel JA n/a 
+* Stücklistenerfassung n/a JA 
+* Vor- und Nachbemerkungen (Bezug, Werbung usw.) JA JA 
+* Generieren von Kundenlisten JA JA 
+* Druck von Preis- und Artikellisten JA JA 
+* Ausgeben von „Hitlisten“ möglich, z.B. verkaufsstärkste Artikel Nein JA 
+* Mengenstaffelpreise Nein JA 
+* Rechnungsausgangsbuch Nein JA 
+* 3-stufiges Mahnwesen Nein JA 
+* Lagerbestandserfassung JA JA 
+* Automatisches Generieren von Bestellvorschlägen Nein JA 
+* Verschiedene Versandarten und Mehrwertsteuersätze JA JA 
+* Kundensperrfunktion Nein JA 
+* Datenimport mit Zuordnungstabelle JA JA 
+* Datenexport zur Finanzbuchhaltung (ASCII, DATEV, Lexware buchhalter) JA JA 
+* Anbindung an Lexware eBusiness (Domainname, Webshop) Nein JA 
+* Schnittstelle zu Microsoft Outlook Nein JA 
+* Mandantenfähig Nein JA 
+* Euro-fähig JA JA 
+* ODBC Schnittstelle JA n/a 
+* Microsoft Look and Feel JA n/a 
+* Ettiketendruck 
