--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -33,6 +33,8 @@ Die folgende Auflistung liefert eine Darstellung der Basisaufgaben die mit Intra
   * ODBC Schnittstelle
   * Microsoft Look and Feel
   * Ettiketendruck 
+  * Seriendruck mit eigenen Vorlagen in PDF, RTF, DOC Format
+  * XML Export
 
 == Sicherheit & Verfügbarkeit ==
   * Replikation der Datenbank 
