--- a/wiki/IntraSell_Classic_Help.wiki
+++ b/wiki/IntraSell_Classic_Help.wiki
@@ -1,17 +1,32 @@
 #labels Phase-Design
-= IN WORK = 
+= INTRASELL ONLINE HELP - IN WORK = 
 
-Features
-1.	Stammdatenverwaltung: Kunden, Lieferanten, Adressen, Etiketten
-2.	Artikel, Artikelgruppen, Preislisten
-3.	Angebot, Auftrag, Rechnung, Lieferschein, Retourschein (Umwandlungsfunktion wie z.B. Rechnung aus einem Angebot zu erstellen) 
-4.	Import- & Exportfunktion, ELBA Schnittstelle
-5.	Etiketten, Adresskleber, Bankbelegausdruck
-6.	Statistiken & Berichte
-Technische Features
-Datenbank - Access 2000, leicht anpassbar, Microsoft Office Look & Feel
-Run Demoversion
-Wichtig: die Demoversion erlaubt das Anlegen von maximal 10 Rechnungen.
-Installation : 
-1.	Für Testbetrieb entzippen Sie die MDB Datei.
-2.	Starten Sie IntraSell_2.02 Datei (Doppelklick)
+
+== Voraussetzungen == 
+=== Hardware === 
+  * 
+=== Software === 
+
+  * Client: 
+  * Server: 
+   Datenbank - MySQL, MYSQL, Oracle od. Access 2003
+
+== Installation ==
+=== Server === 
+  * TODO  
+=== Client ===  
+  * Entzippen Sie die ZIP Datei in einem belibiegen Ordner.
+  * Starten Sie die setup.bat Datei für die automatische Einrichtung der Komponenten 
+  * Starten Sie IntraSell.exe Datei (Doppelklick)
+
+== Funkionen == 
+  * Stammdatenverwaltung: Kunden, Lieferanten, Adressen, Etiketten
+  * Artikel, Artikelgruppen, Preislisten
+  *	Angebot, Auftrag, Rechnung, Lieferschein, Retourschein (Umwandlungsfunktion wie z.B. Rechnung aus einem Angebot zu erstellen) 
+  * 	Import- & Exportfunktion, ELBA Schnittstelle
+  *	Etiketten, Adresskleber, Bankbelegausdruck
+  *	Statistiken & Berichte
+ 
+
+== Sicherung == 
+  * TODO  
