--- a/wiki/Screenshots_IntraSell_Classic_3.wiki
+++ b/wiki/Screenshots_IntraSell_Classic_3.wiki
@@ -1,15 +1,14 @@
-#summary One-sentence summary of this page.
 #labels Featured
+= Screenshots IntraSell 3=
 
-= Introduction =
-This page contains screenshots from the Intrasell programm. 
+Hauptseite
+<img src="http://www.griton.eu/misc/intrasell/Screenshot_intrasell_3.jpg">
 
+Artikelverwaltung
+<img src="http://www.griton.eu/misc/intrasell/Screenshot_intrasell_3_Artikel.jpg">
 
-= Details =
+Kundenverwaltung
+<img src="http://www.griton.eu/misc/intrasell/Screenshot_intrasell_3_Kunden.jpg">
 
-<img src=""/>
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+Trading Board
+<img src="http://www.griton.eu/misc/intrasell/Screenshot_intrasell_3_TradingBoard.jpg">
